nice zoom in efect

--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 		<title>Gamification</title>
 	</head>
 	<body>
-		<div class="container">
+		<!-- <div class="container">
 			<img
 				src="Media/Images/Arcade Machine - Saxion skin2.png"
 				alt="arcade machine"
 				id="arcade" />
-			<canvas id="canvas" width="865" height="656"></canvas>
+			<canvas id="canvas" width="800" height="600"></canvas>
+		</div> -->
+		<div id="corridor">
+			<img src="Media/Images/background.png" id="background" />
+
+			<img
+				src="Media/Images/Arcade Machine - Saxion with bottom.png"
+				id="machine"
+				class="blur" />
+
+			<!-- <canvas id="canvas" width="800" height="600" class="hide"></canvas> -->
 		</div>
+
+		<button id="animate">Animate</button>
+		<button id="back">GO back</button>
 	</body>
 </html>
