breakout4 works as intended in base form

--- a/Games/Breakout/index.html
+++ b/Games/Breakout/index.html
@@ -10,12 +10,11 @@
 		<script
 			defer
 			src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-		<script defer src="breakout2.js"></script>
+		<script defer src="breakout4.js"></script>
 	</head>
 
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="phaser-example"></div>
+		<div id="game"></div>
 		<button id="winButton">Win</button>
 		<button id="loseButton">Lose</button>
 		<button id="bonus1Button">Speed</button>
